[package]
name    = "compacts"
version = "0.10.0"
edition = "2018"
build   = "build.rs"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
readme  = "README.md"
license = "Unlicense/MIT"
repository  = "https://github.com/symplectik/compacts"
keywords    = ["succinct", "bitvec", "bitmap", "bitset"]
categories  = ["data-structures"]
description = """
compact data structures
"""

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = []

roaring = []

[workspace]
members = []

[dependencies]

[build-dependencies]

# tests, benchmarks and examples
[dev-dependencies]
quickcheck = "0.7"
lazy_static = "1"
rand = "0.6"
libc = "*"
