[package]
name    = "compacts"
version = "0.10.0"
edition = "2018"
build   = "build.rs"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
readme  = "README.md"
license = "Apache-2.0/MIT"
repository  = "https://github.com/symplectik/tidy"
keywords    = ["compact", "succinct", "rank", "select"]
categories  = ["data-structures"]
description = "compact data structures"

[dependencies]

[build-dependencies]

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
lazy_static = "1"
# zstd = "0.4"
