[package]
name    = "compacts-bits"
version = "0.1.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]

[dependencies]

[dependencies.compacts-prim]
path = "../compacts-prim"

[dependencies.karabiner]
git = "https://github.com/feb29/karabiner"

[dev-dependencies]
log  = "0.3"
rand = "0.3"
env_logger = "0.4"