[package]
name    = "compacts-bits"
version = "0.3.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
license = "Unlicense/MIT"
repository  = "https://github.com/feb29/compacts"
keywords    = ["compact", "succinct", "bit-vector"]
categories  = ["data-structures"]
description = "succinct bit vector"

[dependencies]
karabiner = "0.1"
itertools = "0.6"

[dev-dependencies]
log  = "0.3"
rand = "0.3"
env_logger = "0.4"
