[package]
name    = "compacts-dict"
version = "0.1.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
license = "MIT/Apache-2.0"
repository  = "https://github.com/feb29/compacts"
keywords    = ["compact", "succinct", "dictionary"]
description = "succinct dictionary"

[dependencies]
compacts-prim = { path = "../compacts-prim", version = "0.1" }
compacts-bits = { path = "../compacts-bits", version = "0.1" }
