[package]
name    = "compacts-dict"
version = "0.2.0"
authors = ["Kohei Watanabe <xbeef29@gmail.com>"]
license = "Unlicense/MIT"
repository  = "https://github.com/feb29/compacts"
keywords    = ["compact", "succinct", "dictionary"]
description = "succinct dictionary"

[dependencies]
compacts-prim = { path = "../compacts-prim", version = "0.2" }
compacts-bits = { path = "../compacts-bits", version = "0.2" }
